--- a/templates/home.html
+++ b/templates/home.html
@@ -10,17 +10,17 @@
   <title>DocsPal</title>
 </head>
 <style>
-
   .info{
     padding: 1rem;
   }
   .info, .cont-1, .cont-2{
-    margin-top: 2rem;
+    margin-top: 2rem; 
   }
   .info{
     background-color:aqua;
   }
   .cont-1, .cont-2{
+    display: flex;
     background-color: rgb(81, 148, 125);
   }
 </style>
@@ -50,7 +50,7 @@
     <div class="jumbotron">
       <div class="caption-name">
         <h1>Health.<br>
-          Powered by Ada.
+          Powered by Alfad
         </h1>
       </div>
       <div class="capsule-img">
@@ -68,11 +68,10 @@
       </div>
 
       <div class="container cont-2">
-        <div class="col-6">
+        <div class="col-5">
           <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea porro quae saepe, eaque consequatur quia dolorum.
             Maiores fugiat vitae minima magni! Distinctio quas id exercitationem dolore veritatis praesentium quia laborum.
           </h3>
-        </div>
       </div>
       
     </div>
