--- a/static/css/home.css
+++ b/static/css/home.css
@@ -24,7 +24,7 @@
   .caption-name h1 {
     padding-left: 1rem;
     text-align: left;
-    font-family: "PTSerif-Bold";
+    font-family: 'MavenPro-Bold';
   }
   
   .capsule-img {
