changed bg color for info, col

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,14 +14,15 @@
     padding: 1rem;
   }
   .info, .cont-1, .cont-2{
-    margin-top: 2rem; 
+    margin-top: 2rem;
+    border-radius: 1rem;
   }
   .info{
-    background-color:aqua;
+    background: rgb(92, 151, 187);
   }
   .cont-1, .cont-2{
     display: flex;
-    background-color: rgb(81, 148, 125);
+    background: rgb(251, 251, 251);
   }
 </style>
 
@@ -49,8 +50,8 @@
     {% include 'partials/nav.html' %}
     <div class="jumbotron">
       <div class="caption-name">
-        <h1>Health.<br>
-          Powered by Alfad
+        <h1>Health<br>
+          Powered by Tech
         </h1>
       </div>
       <div class="capsule-img">
