changed result to caps

--- a/templates/tumorDetection.html
+++ b/templates/tumorDetection.html
@@ -73,9 +73,9 @@ font-family: 'MavenPro-Bold';
                         <img src="media/{{ image.file }}" alt="uploaded image" />
                     </div>
                 {%  if prediction == 1  %}
-                        <div class="prediction" >The tumor is <span class="Malignant">Detected</span></div>
+                        <div class="prediction" >The tumor is <span class="Malignant">DETECTED</span></div>
                 {%  else %}
-                        <div class="prediction">The tumor is <span class="Benign">Not Detected</span></div>
+                        <div class="prediction">The tumor is <span class="Benign">NOT DETECTED</span></div>
                 {%  endif %}
                 </div>
             </div>
