--- a/templates/cancerPrediction.html
+++ b/templates/cancerPrediction.html
@@ -47,14 +47,17 @@ font-family: 'MavenPro-Bold';
             </div>
             <div class="breast-cancer-card">
                 <div class="cancer-text card-style">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde animi voluptatum doloremque
-                    dignissimos
-                    distinctio adipisci, asperiores quas atque illum ad voluptate corporis ipsa dicta, quod accusantium.
-                    Quod voluptas sint deserunt totam praesentium voluptatibus fuga, similique accusamus cupiditate
-                    molestiae vero fugit possimus, laboriosam nisi optio sunt atque, architecto rem nam ea omnis laborum
-                    minus! Asperiores exercitationem consequatur ipsa dolorem, perspiciatis impedit molestiae illo iure
-                    doloremque, eos distinctio quibusdam provident eligendi maxime quo labore vero voluptatum cupiditate
-                    ut
+                    <div class="cancer-text">
+                        Breast cancer can occur in women and rarely in men.
+                        Symptoms of breast cancer include
+                        <ul style="*">
+                            <li>a lump in the breast,</li>
+                            <li>bloody discharge from the nipple,</li>
+                            <li>and changes in the shape or texture of the nipple or breast.</li>
+                        </ul>
+                        Its treatment depends on the stage of cancer. It may consist of chemotherapy, radiation, hormone
+                        therapy and surgery.
+                    </div>
 
                 </div>
 
